# chat_app

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  ChatManager.cpp  MenuController.cpp  Message.cpp  README.md  User.cpp  User.h  UserManager.cpp  UserManager.h  build_x64-Debug.bat  build_x64-Release.bat  chat_app.sln  chat_app.vcxproj  console-chat.vcxproj  console-chat.vcxproj.filters  docker-compose.yml  main.cpp  test_with_docker.bat  vcpkg.json
client/: CMakeLists.txt
client/include/: IChatService.h  IUserService.h  MenuController.h  UserService.h
client/include/client/: AuthDialog.h  ChatsWindow.h  Client.h  CommonItem.h  CreateGroupChat.h  MainWindow.h
client/src/: AuthDialog.cpp  ChatManager.cpp  ChatsWindow.cpp  Client.cpp  CreateGroupChat.cpp  MainWindow.cpp  MenuController.cpp  UserManager.cpp  main.cpp
client/ui/: AuthDialog.ui  ChatsWindow.ui  CreateGroupChat.ui  MainWindow.ui
common/: CMakeLists.txt
common/include/: CommonTypes.h  Message.h  Models.h  User.h
common/src/: Socket.cpp
commonlib/: CMakeLists.txt
commonlib/include/: Message.h  Serializable.h  Socket.h  ThreadPool.h
commonlib/src/: InterruptableThread.cpp  Message.cpp  Socket.cpp  ThreadPool.cpp  User.cpp
scripts/: dev_run.ps1  init.sql
server/: CMakeLists.txt
server/include/: ChatManager.h  Server.h
server/include/server/: AdminRepository.h  BlockedQueue.h  ChatRepository.h  CommandRegistry.h  Connection.h  Database.h  Handlers.h  ICommand.h  InterruptableThread.h  MessageRepository.h  PasswordHash.h  Server.h  ThreadPool.h  UserRepository.h
server/include/thread_pool/: BlockedQueue.h  ThreadPool.h
server/src/: AdminRepository.cpp  ChatRepository.cpp  CommandRegistry.cpp  Connection.cpp  Database.cpp  Handlers.cpp  InterruptableThread.cpp  MessageRepository.cpp  PasswordHash.cpp  Server.cpp  ThreadPool.cpp  UserRepository.cpp  main.cpp
server/src/thread_pool/: ThreadPool.cpp
serverGUI/: CMakeLists.txt
serverGUI/include/serverGUI/: ChatInfoItem.h  ServerGUIWindow.h  UserInfoItem.h
serverGUI/src/: ServerGUIWindow.cpp  main.cpp
serverGUI/ui/: ServerGUIWindow.ui
tests/: CMakeLists.txt  Message_test.cpp  ThreadPool.cpp  ThreadPool.h  User_test.cpp  main.cpp
